2024-10-29  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Release 0.2.7

	* DESCRIPTION (Authors@R): Added

	* vignettes/gcbd.Rnw: No longer force call for package versions

	* man/figures.Rd: Remove extra \code{loglogAnalysis} to address a nag

2024-02-15  Dirk Eddelbuettel  <edd@debian.org>

	* .github/workflows/ci.yaml (jobs): Update to actions/checkout@v4,
	add r-ci-setup actions

2022-11-05  Dirk Eddelbuettel  <edd@debian.org>

	* .github/workflows/ci.yaml (jobs): Update to actions/checkout@v3

2022-02-20  Dirk Eddelbuettel  <edd@debian.org>

	* NAMESPACE: Add panel.superpose to lattice imports

2021-11-08  Dirk Eddelbuettel  <edd@debian.org>

 	* README.md: Remove Travis badge
	* .travis.yml: Remove Travis YAML config

2021-03-26  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (URL, BugReports): Add two fields

2020-12-26  Dirk Eddelbuettel  <edd@debian.org>

        * .github/workflows/ci.yaml: Add CI runner using r-ci
	* README.md: Add new CI badge

2017-08-26  Dirk Eddelbuettel  <edd@debian.org>

	* .travis.yml (before_install): Use https to fetch run.sh

2016-09-27  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Release 0.2.6

	* NAMESPACE: Change some importFrom() from RSQLite to DBI

2016-09-12  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Rolled version and date

	* DESCRIPTION (Title, Description): Edited to current standards

	* DESCRIPTION (Imports): Added 'Matrix, DBI, RSQLite, plyr, reshape,
	lattice'

	* NAMESPACE: Added importFrom() statements for each package

	* R/benchmark.R (svdBenchmarkgputools): Commented-out as SVD no
	longer provided in current gputools
	* man/benchmark.Rd: Commented-out here too

	* .travis.yml: Switch to using run.sh for Travis CI

2013-12-11  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION: Version 0.2.5

	* vignettes/*: Moved files from inst/doc/

	* ChangeLog/*: Moved from inst/

	* .travis.yml: Added for Github / Travis support